2009-06-12  Thomas Thurman  <thomas.thurman@collabora.co.uk>

        NB#118850

	* matchbox/core/mb-window-manager.c: When a window is unmapped,
	check whether each window below it wants focus and is visible
	in order to find the window which should be focussed next.
	* matchbox/core/mb-wm-client.[ch]: Add functions to get whether
	a window is visible, and whether a window covers the screen.

2009-06-11  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	* matchbox/client-types/mb-wm-client-menu.c (mb_wm_client_menu_init):
	Add support for the new atom for legacy menus. Fixes: NB#121678. Also
	returned the dynamic placement code since it does not break submenus
	anymore.
	* matchbox/core/mb-wm-client-window.c
	(mb_wm_client_window_sync_properties),
	matchbox/core/mb-wm-client-window.h, matchbox/core/mb-wm-types.h,
	matchbox/core/mb-wm-atoms.c: Add support for _HILDON_WM_WINDOW_TYPE
	and _HILDON_WM_WINDOW_TYPE_LEGACY_MENU atoms.

2009-06-08  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.42

	Patch from Laszlo Pere for NB#114352.

	* matchbox/core/mb-wm-props.h: Set maximum length of utf8 atoms to
	512 * 4 bytes.

2009-06-07  Thomas Thurman  <thomas.thurman@collabora.co.uk>

	NB#120885: Animation actors steal focus when created.

	* matchbox/core/mb-window-manager.c: don't focus animation
	actors if they appear.
	* matchbox/core/mb-wm-atoms.c: add atom for animation actors.
	* matchbox/core/mb-wm-types.h: ditto.

2009-06-05  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* matchbox/core/mb-wm-layout.c (mb_wm_layout_real_layout_free):
	  Undoing Kimmo's change not to reconfigure hidden windows.
	  Let's do it in h-d.

2009-06-04  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Patch from Laszlo for NB#120014.

	* matchbox/core/mb-window-manager.c (mb_wm_focus_client): Mark the
	client focused even if it was destroyed. The focus will be corrected
	when the unmap event comes. Also remove unused return value from the
	function.
